<resources>
    <string name="app_name">Calculator</string>
    <string name="equal">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="times">*</string>
    <string name="divided">/</string>
    <string name="use_fractions">Use fractions</string>
    <string name="first_number">First number</string>
    <string name="second_number">Second number</string>
</resources>