<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/second_number"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="no"
        android:inputType="numberDecimal"
        android:hint="@string/second_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/symbols"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toStartOf="@+id/second_number"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toEndOf="@+id/first_number"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43"
        tools:ignore="MissingConstraints"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/first_number"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="92dp"
        android:autofillHints="no"
        android:inputType="numberDecimal"
        android:hint="@string/first_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <CheckBox
        android:id="@+id/use_fractions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/use_fractions"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/symbols"
        app:layout_constraintVertical_bias="0.1"
        tools:ignore="MissingConstraints" />

    <View
        android:id="@+id/line"
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_marginTop="128dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_number"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/div"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/circular_button"
        android:text="@string/divided"
        app:layout_constraintEnd_toStartOf="@+id/mult"
        app:layout_constraintStart_toEndOf="@+id/minus"
        app:layout_constraintTop_toBottomOf="@+id/line"
        tools:ignore="MissingConstraints"
        android:onClick="div"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/mult"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/circular_button"
        android:text="@string/times"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/div"
        app:layout_constraintTop_toBottomOf="@+id/line"
        tools:ignore="MissingConstraints"
        android:onClick="mult"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/minus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/circular_button"
        android:text="@string/minus"
        app:layout_constraintEnd_toStartOf="@+id/div"
        app:layout_constraintStart_toEndOf="@+id/plus"
        app:layout_constraintTop_toBottomOf="@+id/line"
        tools:ignore="MissingConstraints"
        android:onClick="minus"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/plus"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/circular_button"
        android:text="@string/plus"
        app:layout_constraintEnd_toStartOf="@+id/minus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"
        tools:ignore="MissingConstraints"
        android:onClick="plus"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/equal"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="170dp"
        android:background="@drawable/circular_button_with_state_change"
        android:text="@string/equal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line"
        android:layout_marginTop="170dp"
        android:onClick="equal"
        tools:ignore="OnClick"
        android:textSize="30sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>